# Emerald-Frame

./: .boring  API.html  fonts.m  logo.psd  test.c
Emerald Frame Todo.oo3/: contents.xml
Examples/2.1 Skeleton/: Test.c
Examples/2.3 Textures/: Test.c
Examples/2.4 Audio/: Test.c
Haskell/: emerald-frame.cabal
Haskell/Graphics/UI/: EmeraldFrame.hs
Mac/: ApplicationDelegate.h  ApplicationDelegate.m  Audio.m  Configuration.m  Drawable.h  Drawable.m  DrawableOpenGLView.h  DrawableOpenGLView.m  Emerald Frame_Prefix.pch  General.m  Info.plist  Input.m  Test Application-Info.plist  Text.m  Time.m  TimerData.h  TimerData.m  Video.m
Mac/Emerald Frame.xcodeproj/: dankna.mode1v3  dankna.pbxuser  project.pbxproj
Mac/Emerald Frame.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Mac/Emerald Frame.xcodeproj/project.xcworkspace/xcuserdata/irene.xcuserdatad/: UserInterfaceState.xcuserstate
Mac/Emerald Frame.xcodeproj/xcuserdata/irene.xcuserdatad/xcschemes/: All Library Types.xcscheme  Dynamic Library.xcscheme  Framework.xcscheme  Static Library.xcscheme  Test Application.xcscheme  xcschememanagement.plist
Portable/: Audio.c  Emerald-Frame.c  Emerald-Frame.h  Unicode.c  Unicode.h
Test/: Test.c
Win/: Audio.c  Configuration.c  EmeraldFrame.def  General.c  Makefile  Time.c  Video.c
