Name:		emerald-frame
Version:	0.0
Description:	A thin platform-abstraction layer which wraps setup code for OpenGL, OpenAL, and several other libraries; oriented towards game development.
License:	OtherLicense
License-file:	LICENSE
Author:		Dan Knapp
Maintainer:	dankna@gmail.com
Build-Type:	Simple
Cabal-Version:	>=1.2

Library
  Build-Depends:	base >= 3 && < 5, bytestring >= 0.9, utf8-string >= 0.3.5
  Exposed-modules:	Graphics.UI.EmeraldFrame
--  extra-libraries:	emerald-frame
--  extra-lib-dirs:	../Mac/build/Release/
  ghc-options:		-Wall -framework "'Emerald Frame'"
--  ghc-options:		-Wall -framework-path../Mac/build/Release/ -framework "Emerald Frame"
