Name:		emerald-frame
Version:	0.0
Description:	A thin platform-abstraction layer which wraps setup code for OpenGL, OpenAL, and several other libraries; oriented towards game development.
License:	OtherLicense
License-file:	LICENSE
Author:		Dan Knapp
Maintainer:	dankna@gmail.com
Build-Type:	Simple
Cabal-Version:	>=1.2

Library
  Build-Depends:        base >= 3 && < 5, bytestring >= 0.9, utf8-string >= 0.3.5,
                        OpenAL >= 1.4.0.0, OpenGL >= 2.4.0.1
  Exposed-modules:	Graphics.UI.EmeraldFrame
  if os(windows)
    extra-libraries:	EmeraldFrame.dll
    extra-lib-dirs:	../Win/build/Libraries/
  if os(darwin)
    ghc-options:	-Wall -framework "'Emerald Frame'"
--    ghc-options:	-Wall -framework-path../Mac/build/Release/ -framework "Emerald Frame"
